# Agentic-AI-powered-CDSS-leveraging-AgenticRag

./: .env.example  .gitignore  README.md  pyproject.toml
agentcds/: __init__.py  config.py  llm.py  schemas.py  vector_store.py
agentcds/agents/: orchestrator.py
agentcds/graph/: __init__.py  agents.py  graph.py  nodes.py  state.py
agentcds/mcp/: fhir.py  pubmed.py  rxnorm.py  web_search.py
agentcds/rag/: crag.py  hyde.py  pipeline.py  self_rag.py
agentcds/web/: __init__.py  app.py
agentcds/web/static/: app.js  index.html  styles.css
examples/: call_mcp_tools.py  run_demo.py  run_graph_demo.py  run_web_demo.py  visualise_graph.py
input/: patient_intake.py
tests/: test_graph_smoke.py
