[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcds"
version = "0.1.0"
description = "Agentic Clinical Decision Support — Academic Research Project"
requires-python = ">=3.10"

dependencies = [
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "huggingface-hub>=0.20",
    "transformers>=4.38",
    "torch>=2.1",
    "langgraph>=0.2.0",
    "chromadb>=0.4.22",
    "httpx>=0.26",
    "fastmcp>=2.0",
    "openai>=1.40.0",
    "ddgs>=0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agentcds*"]
